--- a/requirements.txt
+++ b/requirements.txt
@@ -21,10 +21,12 @@ pyasn1-modules==0.2.8
 pycparser==2.20
 pyOpenSSL==20.0.1
 pytz==2021.1
+selenium==3.141.0
 service-identity==18.1.0
 six==1.15.0
 sqlparse==0.4.1
 Twisted==21.2.0
 twisted-iocpsupport==1.0.1
 txaio==21.2.1
+urllib3==1.26.4
 zope.interface==5.4.0
